2007-05-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el (vc-find-root): Stop searching when the user changes.

2007-05-16  Richard Stallman  <rms@gnu.org>

	* buff-menu.el (Buffer-menu-sort-column): Doc fix.

2007-05-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (magic-mode-alist, magic-fallback-mode-alist):
	Move the *ml, Postscript, and XmCD entries to the fallback part.

	* files.el (magic-fallback-mode-alist):
	Rename from file-start-mode-alist.

2007-05-16  Nikolaj Schumacher  <n_schumacher@web.de>  (tiny change)

	* progmodes/compile.el (compilation-handle-exit): Quote first
	argument of `run-hook-with-args'.

2007-05-16  Juanma Barranquero  <lekktu@gmail.com>

	* buff-menu.el (Buffer-menu-sort-column):
	* dabbrev.el (dabbrev-upcase-means-case-search):
	* dired.el (dired-recursive-deletes, dired-recursive-copies):
	* info.el (Info-current-subfile):
	* ls-lisp.el (ls-lisp-verbosity):
	* msb.el (msb-menu-cond):
	* pcvs.el (cvs-dired-use-hook):
	* simple.el (set-mark-command-repeat-pop):
	* time.el (display-time-24hr-format, display-time-mail-file):
	Doc fixes.

	* tutorial.el (get-lang-string, tutorial--find-changed-keys):
	* printing.el (pr-ps-fast-fire): Fix typos in docstrings.

	* view.el (view-inhibit-help-message): Fix typo in docstring.
	(view-scroll-auto-exit, view-try-extend-at-buffer-end): Doc fixes.

2007-05-14  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmail.el (rmail-convert-to-babyl-format): Check
	content-transfer-encoding _last_, because we need its position in
	base64-header-field-end.

2007-05-14  Juanma Barranquero  <lekktu@gmail.com>

	* files.el (mode-require-final-newline, require-final-newline)
	(enable-local-variables, enable-local-eval): Doc fixes.

2007-05-10  Edward O'Connor  <hober0@gmail.com>  (tiny change)

	* progmodes/python.el (python-font-lock-keywords)
	(python-open-block-statement-p, python-mode): Add support for the new
	"with" keyword.

2007-05-10  Richard Stallman  <rms@gnu.org>
